ci: update pre-commit and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 
 # -- Project gitignore -----------------------------------------------------------------
 
+dev_*.py
 
 # -- Python gitignore ------------------------------------------------------------------
 
