--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@
 
 repos:
     - repo: https://github.com/pre-commit/pre-commit-hooks
-      rev: v4.1.0
+      rev: v4.2.0
       hooks:
           - id: end-of-file-fixer
           - id: trailing-whitespace
@@ -11,20 +11,15 @@ repos:
           - id: check-toml
           - id: check-yaml
 
-    - repo: https://github.com/asottile/setup-cfg-fmt
-      rev: v1.20.0
-      hooks:
-          - id: setup-cfg-fmt
-
     - repo: https://github.com/psf/black
-      rev: 22.1.0
+      rev: 22.3.0
+      types: [ python ]
       hooks:
         - id: black
-          additional_dependencies: ['click==8.0.4']
           args: [ --safe ]
 
-    - repo: https://gitlab.com/pycqa/flake8
-      rev: 3.9.2
+    - repo: https://github.com/PyCQA/flake8
+      rev: 4.0.1
       hooks:
           - id: flake8
             args: [--config, setup.cfg]
