--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ build-backend = "setuptools.build_meta"
 
 
 [tool.setuptools_scm]
-write_to = "cmpy/_version.py"
+write_to = "exactdiag/_version.py"
 git_describe_command = "git describe --dirty --tags --long --match * --first-parent"
 
 
