--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 setuptools>=60.0.0
 setuptools-scm[toml]>=4.0.0
-wheel>=0.37.0
 hypothesis>=6.0.0
 pytest>=6.2.0
-pytest-cov>=3.0.0
-numpy>=1.20.3
+numpy>=1.20.3, <1.22
+numba>=0.55.0
 scipy>=1.7.1
 matplotlib>=3.0.0
 colorcet>=2.0.0
