--- a/setup.cfg
+++ b/setup.cfg
@@ -31,13 +31,12 @@ install_requires =
     hypothesis>=6.0.0
     lattpy>=0.7.0
     matplotlib>=3.0.0
-    numpy>=1.20.3
+    numba>=0.55.0
+    numpy>=1.20.3,<1.22
     pytest>=6.2.0
-    pytest-cov>=3.0.0
     scipy>=1.7.1
     setuptools>=60.0.0
     setuptools-scm[toml]>=4.0.0
-    wheel>=0.37.0
 python_requires = >=3.7
 include_package_data = True
 platforms = any
@@ -45,12 +44,8 @@ zip_safe = False
 
 [options.extras_require]
 build =
-    setuptools>=60.0.0
-    setuptools-scm[toml]>=4.0.0
     wheel>=0.37.0
 test =
-    hypothesis>=6.0.0
-    pytest>=6.2.0
     pytest-cov>=3.0.0
 
 [bdist_wheel]
@@ -72,3 +67,29 @@ exclude =
     __pycache__,
     build,
     dist,
+
+[coverage:run]
+branch = False
+source = exactdiag
+
+[coverage:report]
+exclude_lines =
+    pragma: no cover
+
+    def __repr__
+    def __str__
+
+    @abstract
+
+    @property
+
+    raise AssertionError
+    raise NotImplementedError
+
+    if 0:
+    if __name__ == .__main__.:
+ignore_errors = True
+omit =
+    exactdiag/tests/*
+    exactdiag/_expm_multiply.py
+    exactdiag/_version.py
