update gitignore and README.md

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # -- Project gitignore -----------------------------------------------------------------
 
 dev_*.py
-
+.data/*
 # -- Python gitignore ------------------------------------------------------------------
 
 # setuptools_scm version file
