--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 dev_*.py
 .data/*
+data/*
 __edcache__/
 
 # -- Python gitignore ------------------------------------------------------------------
