--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
           ".pre-commit-config.yaml",
           ".readthedocs.yaml",
           "pyproject.toml",
-          "lgtm.yml",
+          "lgtm.yml"
           ]'
     outputs:
       should_skip: ${{ steps.skip_check.outputs.should_skip }}
