update: bump numpy version

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ setuptools>=60.0.0
 setuptools-scm[toml]>=4.0.0
 hypothesis>=6.0.0
 pytest>=6.2.0
-numpy>=1.20.3, <1.23
+numpy>=1.23
 numba>=0.56
 scipy>=1.9.0
 matplotlib>=3.0.0
