--- a/setup.cfg
+++ b/setup.cfg
@@ -27,15 +27,15 @@ project_urls =
 packages = find:
 install_requires =
     colorcet>=2.0.0
-    gftool>=0.10.0
+    gftool>=0.11.0
     hypothesis>=6.0.0
     h5py
-    lattpy>=0.7.0
+    lattpy>=0.7.6
     matplotlib>=3.0.0
-    numba>=0.55.0
-    numpy>=1.20.3,<1.22
+    numba>=0.56.0
+    numpy>=1.22.0,<=1.23.0
     pytest>=6.2.0
-    scipy>=1.7.1
+    scipy>=1.9.0
     setuptools>=60.0.0
     setuptools-scm[toml]>=4.0.0
 python_requires = >=3.7
