--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,11 @@ setuptools>=60.0.0
 setuptools-scm[toml]>=4.0.0
 hypothesis>=6.0.0
 pytest>=6.2.0
-colorcet>=2.0.0
-matplotlib>=3.0.0
+numpy>=1.22.0,<=1.23.0
+numba>=0.56.0
 scipy>=1.9.0
-numba>=0.56.2
-numpy==1.23.0
+matplotlib>=3.0.0
+colorcet>=2.0.0
 lattpy>=0.7.6
 gftool>=0.11.0
 h5py
