--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ setuptools>=60.0.0
 setuptools-scm[toml]>=4.0.0
 hypothesis>=6.0.0
 pytest>=6.2.0
-numpy>=1.22.0,<=1.23.0
+numpy>=1.21.0
 numba>=0.56.0
 scipy>=1.9.0
 matplotlib>=3.0.0
