--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,7 @@ install_requires =
     lattpy>=0.7.6
     matplotlib>=3.0.0
     numba>=0.56.0
-    numpy>=1.22.0,<=1.23.0
+    numpy>=1.21.0
     pytest>=6.2.0
     scipy>=1.9.0
     setuptools>=60.0.0
