--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,9 +50,10 @@ jobs:
       with:
         fetch-depth: 0
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
+        cache: 'pip' # caching pip dependencies
 
     - name: Build and install
       run: |
@@ -67,8 +68,8 @@ jobs:
       run: |
         pytest tests/ --cov=exactdiag --cov-report=xml -v
 
-#    - name: Upload coverage to Codecov
-#      uses: codecov/codecov-action@v2
-#      with:
-#        env_vars: OS,PYTHON
-#        verbose: True
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        env_vars: OS,PYTHON
+        verbose: True
